--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,8 @@
         <activity android:name=".auth.RegistrationActivity"
             android:exported="false" />
 
+        <activity android:name=".MainActivity"
+            android:exported="true" />
+
     </application>
 </manifest>
